adding error handling
