# src/controllers/busController.ts
@@ -18,7 +18,6 @@ export async function addBus(ctx: Context): Promise<any> {
     registrationNumber,
     insuranceExpiryDate,
     driverID,
-    adminID,
     routeID,
   } = ctx.request.body as {
     busName: string;
@@ -29,30 +28,26 @@ export async function addBus(ctx: Context): Promise<any> {
     registrationNumber: string;
     insuranceExpiryDate: string;
     driverID: number;
-    adminID: number;
     routeID: number;
   };
+  const adminID = ctx.state.adminId;
+
   try {
-    const bus = await addBusService(
-      {
-        busName,
-        capacity,
-        manufacturer,
-        model,
-        year,
-        registrationNumber,
-        insuranceExpiryDate,
-        driverID,
-        adminID,
-        routeID,
-      },
-      ctx.state.adminId
-    );
+    const bus = await addBusService({
+      busName,
+      capacity,
+      manufacturer,
+      model,
+      year,
+      registrationNumber,
+      insuranceExpiryDate,
+      driverID,
+      adminID,
+      routeID,
+    });
     ctx.body = { message: "Bus added successfully", bus };
   } catch (error) {
-    console.log(error);
     ctx.status = 500;
-
     ctx.body = { error: "An error occurred while adding Bus" };
   }
 }
@@ -121,34 +116,28 @@ export async function busDetails(ctx: Context) {
     const bus = await getBusDetails(Number(busId));
     ctx.body = { message: "Bus details fetched successfully", bus };
   } catch (error) {
-    console.log(error);
     ctx.status = 500;
     ctx.body = { error: "An error occurred while fetching bus details" };
   }
 }
 
-
 export async function assignedBusDetails(ctx: Context): Promise<void> {
-    const driverId = ctx.params.driverId;
-  
-    try {
-      const bus = await getAssignedBusDetails(driverId);
-  
-      if (!bus) {
-        ctx.status = 404;
-        ctx.body = { message: "No assigned bus found for this driver" };
-        return;
-      }
-  
-      ctx.body = {
-        message: "Assigned bus details for driver fetched successfully",
-        bus,
-      };
-    } catch (error) {
-      console.log(error);
-      ctx.status = 500;
-      ctx.body = {
-        error: "An error occurred while fetching assigned bus details",
-      };
+  const driverId = ctx.params.driverId;
+  try {
+    const bus = await getAssignedBusDetails(driverId);
+    if (!bus) {
+      ctx.status = 404;
+      ctx.body = { message: "No assigned bus found for this driver" };
+      return;
     }
+    ctx.body = {
+      message: "Assigned bus details for driver fetched successfully",
+      bus,
+    };
+  } catch (error) {
+    ctx.status = 500;
+    ctx.body = {
+      error: "An error occurred while fetching assigned bus details",
+    };
   }
+}
